--- a/src/main/resources/public/css/mocker.css
+++ b/src/main/resources/public/css/mocker.css
@@ -1,3 +1,17 @@
 .mkrBgr {
 	background: url(/images/background.png);
 }
+
+.input-field .materialize-textarea {
+	min-height: 100px;
+}
+form.card-panel {
+	margin: 1rem 0 1rem 0;
+}
+p.text-explain {
+	font-size: 12px;
+	color: #9e9e9e;
+}
+.row.last {
+	margin-bottom: 0px;
+}
